# PCU20

./: .gitignore  CLAUDE.md  README.md  pcu20.toml.example  pyproject.toml
src/pcu20/: __init__.py  __main__.py  app.py  cli.py  config.py  event_bus.py
src/pcu20/focas/: __init__.py  client.py  connector.py  poller.py  types.py
src/pcu20/machines/: models.py  registry.py
src/pcu20/protocol/: auth.py  base.py  codec.py  commands.py  discovery.py  handlers.py  registry.py  server.py  session.py  types.py
src/pcu20/serial/: __init__.py  drip_feed.py  tcp_drip.py
src/pcu20/storage/: filesystem.py  shares.py  versioning.py
src/pcu20/web/: app.py  websocket.py
src/pcu20/web/routes/: dashboard.py  files.py  logs.py  machines.py  probe.py  setup.py  shares.py
src/pcu20/web/static/css/: style.css
src/pcu20/web/static/js/: app.js
src/pcu20/web/templates/: base.html  dashboard.html  files.html  logs.html  machines.html  probe.html  setup.html  shares.html
tests/: conftest.py
tests/test_protocol/: test_codec.py  test_session.py
tests/test_storage/: test_shares.py
tools/: capture_proxy.py  replay.py
